# AIAR

./: .gitignore
engine/: index.html  package-lock.json  package.json  vite.config.ts
engine/src/: index.ts
engine/src/core/: EngineSetup.ts  Logger.ts  WebXRSetup.ts
engine/src/interaction/: VoiceCommandManager.ts
engine/src/model/: SceneLoader.ts  ScriptManager.ts  types.ts
engine/src/ui/: DebugOverlay.ts  VRPopup.ts  WristMenu.ts
host/: main.py  pyproject.toml
host/scripts/: generate_ts.py
host/src/: ai_service.py  command_processor.py  logger.py  main.py  mcp_server.py  models.py  scene_manager.py  sse.py
knowledge/: sources.json
knowledge/articles/: custom-game-scripts.md  debugging-skill.md  local-development-webxr.md  mcp-ai-operations.md  python-host.md  repository-structure.md  supported-scene-objects.md  voice-control.md  vr-editing-tools.md  web-frontend.md  webxr-multimodal-tracking.md
knowledge/categories/: overview.md  skills.md  system-architecture.md  user-interaction.md
projects/default/scenes/: scene.json
projects/default/scripts/: JumpBehaviour.js  RotateBehaviour.js
