[project]
name = "host"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "fastmcp>=3.4.2",
    "imageio-ffmpeg>=0.6.0",
    "openai-whisper>=20250625",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
